No Longer has weird White Space. Working on Nav Bar

--- a/app/assets/stylesheets/model.scss
+++ b/app/assets/stylesheets/model.scss
@@ -1,11 +1,14 @@
 @import 'model_mixins';
 
-html, body, main {
-    margin: 0px;
-    height: 100%;
-    width: 100%;
-    overflow: scroll;
-}
+// html, body, main {
+//     margin: 0px;
+//     height: 100%;
+//     width: 100%;
+// }
+//
+// html {
+//    overflow: scroll;
+// }
 
 #workspace {
     height: 100%;
